src/components/GamesPosters/index.css
@import "../../variables.global.css";

.listContainer {
  margin: -1rem auto 5rem;
  padding: 0 1rem;
  max-width: 1600px;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}

@media (min-width: 1025px) {
  .listContainer {
    padding: 0 2rem 0 3rem;
  }
}

.listItem {
  list-style: none;
  flex-basis: 100%;
  flex-grow: 1;
  position: relative;
  overflow: hidden;
  background: #FAFAFC;

  & a {
    position: absolute;
    top: 0;
    bottom: 0;
    right: 0;
    left: 0;
  }

  & img {
    object-fit: cover;
    width: 100%;
    height: 100%;
    transition: all 0.4s;
    opacity: 0.98;
  }
}

.listItem:hover img:hover {
  transform: scale(1.03);
  opacity: 1;
  filter: saturate(1.3);
}

.gameLogo img:hover {
  transform: none;
}

.listItem:before {
  display: block;
  content: "";
  width: 100%;
}

.mainTitles:before {
  padding-top: 150%;
}

.oldTitles:before {
  padding-bottom: 70%;
}

@media (max-width: 1024px) {
  .listItem:not(:first-child) {
    margin-top: 1rem;
  }
}

@media (min-width: 1025px) {
  .listItem {
    margin: 1rem 1rem 0 0;
  }

  .twoColumns .listItem {
    flex-basis: 47%;
  }

  .threeColumns .listItem {
    flex-basis: 31%;
  }
}

.gameLogo {
  position: absolute;
  top: 40%;
  left: 15%;
  right: 15%;
  /* below line fixes inexplicable jagged edges in Chrome */
  backface-visibility: hidden;

  & :--headings {
    color: white;
    text-align: center;
  }
}

.oldTitles .gameLogo {
  top: 22%;
}

